# knowitall

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml  jsconfig.json  manifest.json  package.json  rollup.config.js
.github/: dependabot.yml  renovate.json
_rolled/: Cargo-3a03f3a8.js  Cargo-3a03f3a8.js.map  Cargo-5dacaa05.js  Cargo-820fc15f.js  Cargo-8ea1dea2.js  Cargo-ba3dd2fc.js  Cargo-ba3dd2fc.js.map  plugin.js  plugin.js.map
_rolled/assets/: knowitall-provider-168b06fa.wasm  knowitall-provider-20ac88a9.wasm  knowitall-provider-3c2e3216.wasm  knowitall-provider-4e45896f.wasm  knowitall-provider-9f3b711e.wasm  knowitall-provider-cbe173dd.wasm  knowitall-provider-ce563ee7.wasm  knowitall-provider-ddca5fe8.wasm
provider/: Cargo.toml
provider/src/: lib.rs  patterns.rs
provider/src/provider/: base64.rs  bytes.rs  color.rs  length.rs  mod.rs  temperature.rs  time.rs
scss/: tooltip.scss
src/: plugin.js
src/components/: ByteProvider.jsx  ColorProvider.jsx  Inline.jsx  PlaintextProvider.jsx  Settings.jsx  TemperatureProvider.jsx
