[package]
name = "knowitall-provider"
description = "Data provider for the KnowItAll Powercord plugin"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
license = "Zlib"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
# Message parsing
regex = "1.4"
bytesize = "1.0"
lexical = "5.2"
# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
